# far2l

./: CMakeLists.txt
ImageViewer/: CMakeLists.txt
OpenWith/: CMakeLists.txt
OpenWith/configs/: OpenWithEng.lng  OpenWithRus.lng
OpenWith/src/: AppProvider.cpp  AppProvider.hpp  BSDAppProvider.cpp  BSDAppProvider.hpp  DummyAppProvider.cpp  DummyAppProvider.hpp  LinuxAppProvider.cpp  LinuxAppProvider.hpp  MacOSAppProvider.cpp  MacOSAppProvider.hpp  OpenWith.cpp  common.hpp  lng.hpp
far2l/src/: vmenu.cpp  vmenu.hpp
